--- a/training/src/App.css
+++ b/training/src/App.css
@@ -1,42 +1,46 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+* {
+	box-sizing: border-box;
   }
-  to {
-    transform: rotate(360deg);
+  html, body {
+	height: 100%;
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  
+  body {
+	background: rgb(131,58,180);
+  background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
+  
+  .app {
+	width: 350px;
+	height: 250px;
+	background-color: #fff;
+	margin: 50px auto 0 auto;
+	padding: 40px;
+	border-radius: 5px;
+	box-shadow: 5px 5px 10px rgba(0,0,0, .2);
+  }
+  
+  .counter {
+	width: 100px;
+	height: 100px;
+	border-radius: 5px;
+	box-shadow: 5px 5px 10px rgba(0,0,0, .2);
+	background-color: #e6e6e6;
+	text-align: center;
+	line-height: 100px;
+	font-size: 34px;
+	margin: 0 auto;
+  }
+  
+  .controls {
+	display: flex;
+	justify-content: space-around;
+	margin-top: 40px;
+  }
+  
+  .controls button {
+	padding: 7px 12px;
+	cursor: pointer;
+	background-color: #6B7A8F;
+	color: white;
+  }
